Indexin partiallara ayrılması.

--- a/dotNetMenuProject/Views/Default/PartialFeature.cshtml
+++ b/dotNetMenuProject/Views/Default/PartialFeature.cshtml
@@ -11,16 +11,16 @@
                     <div class="feature-img">
                         <div class="row">
                             <div class="col-6">
-                                <img src="img/feature-1.jpg" alt="Image">
+                                <img src="~/food-website-template/img/feature-1.jpg" alt="Image">
                             </div>
                             <div class="col-6">
-                                <img src="img/feature-2.jpg" alt="Image">
+                                <img src="~/food-website-template/img/feature-2.jpg" alt="Image">
                             </div>
                             <div class="col-6">
-                                <img src="img/feature-3.jpg" alt="Image">
+                                <img src="~/food-website-template/img/feature-3.jpg" alt="Image">
                             </div>
                             <div class="col-6">
-                                <img src="img/feature-4.jpg" alt="Image">
+                                <img src="~/food-website-template/img/feature-4.jpg" alt="Image">
                             </div>
                         </div>
                     </div>
