--- a/dotNetMenuProject/Views/Default/Index.cshtml
+++ b/dotNetMenuProject/Views/Default/Index.cshtml
@@ -14,68 +14,48 @@
     @await Html.PartialAsync("PartialNavbar")
 
     <!--PartialCarousel-->
-    @await Html.PartialAsync("PartialCarousel")
-
+    <div id="carouse">
+        @await Component.InvokeAsync("_CarouselViewComponentPartial")
+    </div>
     <!--CreateBooking-->
-    @await Html.PartialAsync("CreateBooking")
-    
-    <!--Partial About-->
-    @await Html.PartialAsync("PartialAbout")
+    <div id="create-booking">
+        @if (TempData["Message"] != null)
+        {
+            <div class="alert alert-success">
+                @TempData["Message"]
+            </div>
+        }
+        @await Html.PartialAsync("CreateBooking")
+    </div>
+
+    <!--_AboutComponentPartial-->
+    <div id="about">
+        @await Component.InvokeAsync("_AboutComponentPartial")
+    </div>
 
     <!--PartialFeature-->
     @await Html.PartialAsync("PartialFeature")
 
-    <!-- Food Start -->
-    <div class="food">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-4">
-                    <div class="food-item">
-                        <i class="flaticon-burger"></i>
-                        <h2>Burgers</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non vulputa. Aliquam metus tortor auctor quis sem.
-                        </p>
-                        <a href="">View Menu</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="food-item">
-                        <i class="flaticon-snack"></i>
-                        <h2>Snacks</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non vulputa. Aliquam metus tortor auctor quis sem.
-                        </p>
-                        <a href="">View Menu</a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="food-item">
-                        <i class="flaticon-cocktail"></i>
-                        <h2>Beverages</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non vulputa. Aliquam metus tortor auctor quis sem.
-                        </p>
-                        <a href="">View Menu</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Food End -->
+    <!--_FoodListComponentPartial-->
+    @await Component.InvokeAsync("_FoodListComponentPartial")
+
     <!--_MenuListComponentPartial-->
-    @await Component.InvokeAsync("_MenuListComponentPartial")
+    <div id="menu-list">
+        @await Component.InvokeAsync("_MenuListComponentPartial")
+    </div>
 
 
     <!--PartialTeam-->
-    @await Component.InvokeAsync("_ChefListComponentPartial")
-
+    <div id="chef-list">
+        @await Component.InvokeAsync("_ChefListComponentPartial")
+    </div>
     <!--PartialTestimonial-->
     @await Html.PartialAsync("PartialTestimonial")
 
     <!--PartialContact-->
-    @await Html.PartialAsync("PartialContact")
-
+    <div id="contact"
+         @await Html.PartialAsync("PartialContact")
+    </div>
     <!--PartialFooter-->
     @await Html.PartialAsync("PartialFooter")
 
