--- a/dotNetMenuProject/Views/Default/PartialFeature.cshtml
+++ b/dotNetMenuProject/Views/Default/PartialFeature.cshtml
@@ -4,8 +4,8 @@
         <div class="row">
             <div class="col-lg-5">
                 <div class="section-header">
-                    <p>Why Choose Us</p>
-                    <h2>Our Key Features</h2>
+                    <p>Neden Biz</p>
+                    <h2>Özelliklerimiz</h2>
                 </div>
                 <div class="feature-text">
                     <div class="feature-img">
@@ -27,7 +27,7 @@
                     <p>
                         Lorem ipsum dolor sit amet consec adipis elit. Phasel nec preti mi. Curabit facilis ornare velit non vulputa. Aliquam metus tortor, auctor id gravida condime, viverra quis sem. Curabit non nisl nec nisi sceleri maximus
                     </p>
-                    <a class="btn custom-btn" href="">Book A Table</a>
+                    <a class="btn custom-btn" href="#create-booking">Rezervasyon Al</a>
                 </div>
             </div>
             <div class="col-lg-7">
@@ -35,7 +35,7 @@
                     <div class="col-sm-6">
                         <div class="feature-item">
                             <i class="flaticon-cooking"></i>
-                            <h3>World’s best Chef</h3>
+                            <h3>Dunyanın En İyi Şefleri</h3>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
                             </p>
@@ -44,7 +44,7 @@
                     <div class="col-sm-6">
                         <div class="feature-item">
                             <i class="flaticon-vegetable"></i>
-                            <h3>Natural ingredients</h3>
+                            <h3>Doğal İçerikler</h3>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
                             </p>
@@ -55,7 +55,7 @@
                     <div class="col-sm-6">
                         <div class="feature-item">
                             <i class="flaticon-medal"></i>
-                            <h3>Best quality products</h3>
+                            <h3>En İyi Ürünler</h3>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
                             </p>
@@ -64,7 +64,7 @@
                     <div class="col-sm-6">
                         <div class="feature-item">
                             <i class="flaticon-meat"></i>
-                            <h3>Fresh vegetables & Meet</h3>
+                            <h3>Taze Meyveler ve Et</h3>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
                             </p>
@@ -75,7 +75,7 @@
                     <div class="col-sm-6">
                         <div class="feature-item">
                             <i class="flaticon-courier"></i>
-                            <h3>Fastest door delivery</h3>
+                            <h3>En Hızlı Teslim</h3>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
                             </p>
@@ -84,7 +84,7 @@
                     <div class="col-sm-6">
                         <div class="feature-item">
                             <i class="flaticon-fruits-and-vegetables"></i>
-                            <h3>Ground beef & Low fat</h3>
+                            <h3>Kıyma ve Az Yağlı</h3>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasel nec preti mi. Curabit facilis ornare velit non vulput metus tortor
                             </p>
