--- a/dotNetMenuProject/Views/Default/PartialNavbar.cshtml
+++ b/dotNetMenuProject/Views/Default/PartialNavbar.cshtml
@@ -1,21 +1,20 @@
-﻿<!-- Nav Bar Start -->
+﻿
 <div class="navbar navbar-expand-lg bg-light navbar-light">
     <div class="container-fluid">
-        <a href="index.html" class="navbar-brand">Acunmedya <span>Menu</span></a>
+        <a href="index.html" class="navbar-brand">Acunmedya <span>Akademi</span></a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-nav ml-auto">
-                <a href="index.html" class="nav-item nav-link active">Ana Sayfa</a>
-                <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
-                <a href="feature.html" class="nav-item nav-link">Rezervasyon</a>
-                <a href="team.html" class="nav-item nav-link">Menü</a>
-                <a href="menu.html" class="nav-item nav-link">Şefler</a>
-                <a href="contact.html" class="nav-item nav-link">İletişim</a>
+                <a href="#carouse" class="nav-item nav-link">Ana Sayfa</a>
+                <a href="#about" class="nav-item nav-link">Hakkımızda</a>
+                <a href="#create-booking" class="nav-item nav-link">Rezervasyon</a>
+                <a href="#menu-list" class="nav-item nav-link">Menü</a>
+                <a href="#chef-list" class="nav-item nav-link">Şefler</a>
+                <a href="#contact" class="nav-item nav-link">İletişim</a>
             </div>
         </div>
     </div>
 </div>
-<!-- Nav Bar End -->
