--- a/dotNetMenuProject/Views/Shared/Components/_ChefListComponentPartial/Default.cshtml
+++ b/dotNetMenuProject/Views/Shared/Components/_ChefListComponentPartial/Default.cshtml
@@ -6,30 +6,38 @@
             <p>Ekip Arkadaşlarımız</p>
             <h2>Profesyonel Şeflerimiz</h2>
         </div>
-            <div class="row">
-        @foreach (var item in Model)
-        {
-            
-                <div class="col-lg-3 col-md-6">
-                    <div class="team-item">
+        <div class="row">
+            @foreach (var item in Model)
+            {
+                <div class="col-lg-3 col-md-6 d-flex">
+                    <div class="team-item d-flex flex-column">
                         <div class="team-img">
-                            <img src=@item.ImageUrl alt="Image">
-                            <div class="team-social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            <img src="@item.ImageUrl" alt="Image"  />
                         </div>
-                        <div class="team-text">
-                            <h2>@item.NameSurname</h2>
-                            <p>@item.Title</p>
+                        <div class="team-text" >
+                            <h2 style="margin: 10px 0;">@item.NameSurname</h2>
+                            <p style="margin: 0;">@item.Title</p>
+                        </div>
+                        <div class="team-social" >
+                            <a href="" style="margin: 0 5px;"><i class="fab fa-twitter"></i></a>
+                            <a href="" style="margin: 0 5px;"><i class="fab fa-facebook-f"></i></a>
+                            <a href="" style="margin: 0 5px;"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="" style="margin: 0 5px;"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
-            
-        }
-
-            </div>
+            }
+        </div>
     </div>
-    <!-- Team End -->
+</div>
+<!-- Team End -->
+
+<style>
+    .team-img img {
+        width: 100%; /* Resmin kapsayıcıya uyacak şekilde ayarlandı */
+        height: 200px; /* Belirli bir yükseklik verildi */
+        object-fit: cover; /* Resim kapsayıcıya uyduruluyor */
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+    }
+</style>
