--- a/dotNetMenuProject/Views/Default/PartialContact.cshtml
+++ b/dotNetMenuProject/Views/Default/PartialContact.cshtml
@@ -1,4 +1,5 @@
-﻿ <!-- Contact Start -->
+﻿@model dotNetMenuProject.Entities.Message
+ <!-- Contact Start -->
 <div class="contact">
     <div class="container">
         <div class="section-header text-center">
@@ -63,21 +64,21 @@
             </div>
             <div class="col-md-6">
                 <div id="success"></div>
-                <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                <form method="post" asp-action="PartialContact" asp-controller="Default">
                     <div class="control-group">
-                        <input type="text" class="form-control" id="name" placeholder="Adınız" required="required" data-validation-required-message="Please enter your name" />
+                        <input type="text" class="form-control" asp-for="Name" placeholder="Adınız" required="required" data-validation-required-message="İsminizi giriniz" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
-                        <input type="email" class="form-control" id="email" placeholder="Mailiniz" required="required" data-validation-required-message="Please enter your email" />
+                        <input type="email" class="form-control" asp-for="Email" placeholder="Mailiniz" required="required" data-validation-required-message="Epostanızı giriniz" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
-                        <input type="text" class="form-control" id="subject" placeholder="Sorunuz" required="required" data-validation-required-message="Please enter a subject" />
+                        <input type="text" class="form-control" asp-for="MessageTitle" placeholder="Sorunuz" required="required" data-validation-required-message="Konuyu giriniz" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
-                        <textarea class="form-control" id="message" placeholder="Mesajınız" required="required" data-validation-required-message="Please enter your message"></textarea>
+                        <textarea class="form-control" asp-for="MessageDetails" placeholder="Mesajınız" required="required" data-validation-required-message="Mesajınızı giriniz"></textarea>
                         <p class="help-block text-danger"></p>
                     </div>
                     <div>
