--- a/dotNetMenuProject/Views/Shared/Components/_SidebarViewComponentPartial/Default.cshtml
+++ b/dotNetMenuProject/Views/Shared/Components/_SidebarViewComponentPartial/Default.cshtml
@@ -26,44 +26,17 @@
     <div class="sidebar-wrapper scrollbar scrollbar-inner">
         <div class="sidebar-content">
             <ul class="nav nav-secondary">
-                <li class="nav-item active">
-                    <a data-bs-toggle="collapse"
-                       href="#dashboard"
-                       class="collapsed"
-                       aria-expanded="false">
-                        <i class="fas fa-home"></i>
-                        <p>Dashboard</p>
-                        <span class="caret"></span>
-                    </a>
-                    <div class="collapse" id="dashboard">
-                        <ul class="nav nav-collapse">
-                            <li>
-                                <a href="../demo1/index.html">
-                                    <span class="sub-item">Dashboard 1</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
+                
                 <li class="nav-section">
                     <span class="sidebar-mini-icon">
                         <i class="fa fa-ellipsis-h"></i>
                     </span>
                     <h4 class="text-section">Menüler</h4>
                 </li>
-
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Slider Alanı</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Kategoriler</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Ürünler</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Rezervasyonlar</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Hakkımızda</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Öne Çıkanlar</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Master Chefler</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Değerlendirmeler</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>İletişim</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Gelen Mesajlar</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Ayarlar</p></a></li>
-                <li class="nav-item"><a href="widgets.html"><i class="fas fa-desktop"></i><p>Çıkış</p></a></li>
+                <li class="nav-item"><a href="/Dashboard/Index"><i class="fas fa-home"></i><p>Dashboard</p></a></li>
+                <li class="nav-item"><a href="/Slider/Index"><i class="fas fa-desktop"></i><p>Slider</p></a></li>
+                <li class="nav-item"><a href="/About/Index"><i class="fas fa-desktop"></i><p>Hakkımızda</p></a></li>
+                <li class="nav-item"><a href="/Booking/Index"><i class="fas fa-desktop"></i><p>Rezervasyonlar</p></a></li>
 
 
             </ul>
