--- a/dotNetMenuProject/Views/_ViewImports.cshtml
+++ b/dotNetMenuProject/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using dotNetMenuProject
 @using dotNetMenuProject.Models
+@using dotNetMenuProject.Entities
+@using dotNetMenuProject.Context
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
