--- a/dotNetMenuProject/Views/Shared/Components/_SidebarViewComponentPartial/Default.cshtml
+++ b/dotNetMenuProject/Views/Shared/Components/_SidebarViewComponentPartial/Default.cshtml
@@ -26,7 +26,7 @@
     <div class="sidebar-wrapper scrollbar scrollbar-inner">
         <div class="sidebar-content">
             <ul class="nav nav-secondary">
-                
+
                 <li class="nav-section">
                     <span class="sidebar-mini-icon">
                         <i class="fa fa-ellipsis-h"></i>
@@ -37,8 +37,11 @@
                 <li class="nav-item"><a href="/Slider/Index"><i class="fas fa-desktop"></i><p>Slider</p></a></li>
                 <li class="nav-item"><a href="/About/Index"><i class="fas fa-desktop"></i><p>Hakkımızda</p></a></li>
                 <li class="nav-item"><a href="/Booking/Index"><i class="fas fa-desktop"></i><p>Rezervasyonlar</p></a></li>
-
-
+                <li class="nav-item"><a href="/Product/Index"><i class="fas fa-desktop"></i><p>Ürünler</p></a></li>
+                <li class="nav-item"><a href="/Chefs/Index"><i class="fas fa-desktop"></i><p>Şefler</p></a></li>
+                <li class="nav-item"><a href="/Message/Index"><i class="fas fa-desktop"></i><p>Mesajlar</p></a></li>
+                <li class="nav-item"><a href="/Journal/Index"><i class="fas fa-desktop"></i><p>Bülten</p></a></li>
+                <li class="nav-item"><a href="/Statistic/Index"><i class="fas fa-desktop"></i><p>İstatistikler</p></a></li>
             </ul>
         </div>
     </div>
