--- a/dotNetMenuProject/Views/Shared/Components/_SidebarViewComponentPartial/Default.cshtml
+++ b/dotNetMenuProject/Views/Shared/Components/_SidebarViewComponentPartial/Default.cshtml
@@ -33,6 +33,7 @@
                     </span>
                     <h4 class="text-section">Menüler</h4>
                 </li>
+                <li class="nav-item"><a href="/Default/Index"><i class="fas fa-home"></i><p>Siteye Git</p></a></li>
                 <li class="nav-item"><a href="/Dashboard/Index"><i class="fas fa-home"></i><p>Dashboard</p></a></li>
                 <li class="nav-item"><a href="/Slider/Index"><i class="fas fa-desktop"></i><p>Slider</p></a></li>
                 <li class="nav-item"><a href="/About/Index"><i class="fas fa-desktop"></i><p>Hakkımızda</p></a></li>
@@ -42,6 +43,7 @@
                 <li class="nav-item"><a href="/Message/Index"><i class="fas fa-desktop"></i><p>Mesajlar</p></a></li>
                 <li class="nav-item"><a href="/Journal/Index"><i class="fas fa-desktop"></i><p>Bülten</p></a></li>
                 <li class="nav-item"><a href="/Statistic/Index"><i class="fas fa-desktop"></i><p>İstatistikler</p></a></li>
+                <li class="nav-item"><a href="/Api/Index"><i class="fas fa-desktop"></i><p>Api</p></a></li>
             </ul>
         </div>
     </div>
