--- a/dotNetMenuProject/Views/Api/Index.cshtml
+++ b/dotNetMenuProject/Views/Api/Index.cshtml
@@ -34,31 +34,18 @@
                                 <div class="item-list">
                                     
                                     <div class="info-user ms-3">
-                                        <div class="username">1₺ = @ViewBag.USD</div>
+                                        <div class="username">1₺ = @ViewBag.USD USD</div>
                                     </div>
                                     
                                 </div>
                                 <div class="item-list">
                                     
                                     <div class="info-user ms-3">
-                                        <div class="username">1₺ = @ViewBag.EUR</div>
+                                        <div class="username">1₺ = @ViewBag.EUR EUR</div>
                                     </div>
                                    
                                 </div>
-                                <div class="item-list">
-                                    <div class="avatar">
-                                        <img src="assets/img/talha.jpg"
-                                             alt="..."
-                                             class="avatar-img rounded-circle" />
-                                    </div>
-                                    <div class="info-user ms-3">
-                                        <div class="username">Talha</div>
-                                        <div class="status">Front End Designer</div>
-                                    </div>
-                                    <button class="btn btn-icon btn-primary btn-round btn-xs">
-                                        <i class="fa fa-plus"></i>
-                                    </button>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
