--- a/dotNetMenuProject/Views/Shared/Components/_SidebarViewComponentPartial/Default.cshtml
+++ b/dotNetMenuProject/Views/Shared/Components/_SidebarViewComponentPartial/Default.cshtml
@@ -33,19 +33,20 @@
                     </span>
                     <h4 class="text-section">Menüler</h4>
                 </li>
-                <li class="nav-item"><a href="/Default/Index"><i class="fas fa-home"></i><p>Siteye Git</p></a></li>
-                <li class="nav-item"><a href="/Dashboard/Index"><i class="fas fa-home"></i><p>Dashboard</p></a></li>
-                <li class="nav-item"><a href="/Slider/Index"><i class="fas fa-desktop"></i><p>Slider</p></a></li>
-                <li class="nav-item"><a href="/About/Index"><i class="fas fa-desktop"></i><p>Hakkımızda</p></a></li>
-                <li class="nav-item"><a href="/Booking/Index"><i class="fas fa-desktop"></i><p>Rezervasyonlar</p></a></li>
-                <li class="nav-item"><a href="/Product/Index"><i class="fas fa-desktop"></i><p>Ürünler</p></a></li>
-                <li class="nav-item"><a href="/Chefs/Index"><i class="fas fa-desktop"></i><p>Şefler</p></a></li>
-                <li class="nav-item"><a href="/Message/Index"><i class="fas fa-desktop"></i><p>Mesajlar</p></a></li>
-                <li class="nav-item"><a href="/Journal/Index"><i class="fas fa-desktop"></i><p>Bülten</p></a></li>
-                <li class="nav-item"><a href="/Statistic/Index"><i class="fas fa-desktop"></i><p>İstatistikler</p></a></li>
-                <li class="nav-item"><a href="/Api/Index"><i class="fas fa-desktop"></i><p>Api</p></a></li>
+                <li class="nav-item"><a href="/Default/Index"><i class="fas fa-globe"></i><p>Siteye Git</p></a></li>
+                <li class="nav-item"><a href="/Dashboard/Index"><i class="fas fa-tachometer-alt"></i><p>Dashboard</p></a></li>
+                <li class="nav-item"><a href="/Slider/Index"><i class="fas fa-images"></i><p>Slider</p></a></li>
+                <li class="nav-item"><a href="/About/Index"><i class="fas fa-info-circle"></i><p>Hakkımızda</p></a></li>
+                <li class="nav-item"><a href="/Booking/Index"><i class="fas fa-calendar-check"></i><p>Rezervasyonlar</p></a></li>
+                <li class="nav-item"><a href="/Product/Index"><i class="fas fa-box"></i><p>Ürünler</p></a></li>
+                <li class="nav-item"><a href="/Chefs/Index"><i class="fas fa-user-chef"></i><p>Şefler</p></a></li>
+                <li class="nav-item"><a href="/Message/Index"><i class="fas fa-envelope"></i><p>Mesajlar</p></a></li>
+                <li class="nav-item"><a href="/Journal/Index"><i class="fas fa-newspaper"></i><p>Bülten</p></a></li>
+                <li class="nav-item"><a href="/Statistic/Index"><i class="fas fa-chart-line"></i><p>İstatistikler</p></a></li>
+                <li class="nav-item"><a href="/Api/Index"><i class="fas fa-code"></i><p>Api</p></a></li>
             </ul>
         </div>
+
     </div>
 </div>
 <!-- End Sidebar -->
